cluster-resources/grafana/grafana-virtual-service.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: grafana
  namespace: monitoring
spec:
  hosts:
  - "grafana.fetdevops.com"
  gateways:
  - istio-ingress/fetdevops-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: kube-prometheus-stack-grafana.monitoring.svc.cluster.local
        port:
          number: 80
